# photon_correlation

./: .gitignore  GNUmakefile.am  LICENSE  README  README.md  SConstruct  TODO  VERSION  archive.py  configure.ac  description  setup.cfg  setup.py
doc/: appendix.tex  applications.tex  correlate.tex  histogram.tex  main.tex  math.tex  photon_correlation.tex  picoquant.tex  programs.tex  todo  versions.tex
interface/: todo
man/: GNUmakefile.am  photon_flid.1  photon_number.1  photon_number_to_channels.1  photon_synced_t2.1  photon_temper.1  photons.1
old/: plot_intensity.py
photon_correlation/: GN.py  Histogram.py  Intensity.py  PhotonNumber.py  Picoquant.py  __init__.py  histogram.py  intensity.py  lifetime.py  photon.py  time_dependent_pl.py
picoquant/: Picoquant.py  __init__.py  files.py  gn.py  histogram.py  interactive.py  lifetime.py  modes.py  photon.py  time_dependent_g2.py  time_dependent_pl.py
sample_data/: t3.txt
scratch/: Makefile  pipe.c
scripts/: add_license.py  blargh.py  blinking.py  build_pl_array.py  gn.py  histogram_total.py  intensity_g2.py  photon_gn_gather.py  plot_flid.py  plot_g2.py  plot_g3.py  plot_histograms.py  plot_intensity.py  plot_interactive.py  plot_lifetime.py  plot_t3_g2.py  process_picoquant.py  read_g2.m  tests.py  time_dependent_g2.py  time_dependent_pl.py
src.cpp/: GNUmakefile  correlate.hpp  echo.hpp  error.hpp  gn_main.cpp  histogram.hpp  limits.cpp  limits.hpp  modes.hpp  options.cpp  options.hpp  photon.cpp  photon.hpp  photons_main.cpp  queue.hpp  queue_main.cpp  t2.cpp  t2.hpp  t3.cpp  t3.hpp  types.hpp
(+333 files in other folders)
