[metadata]
name = photon_correlation
version = 1.6.1
author = Thomas Bischof
author_email = tsbischof@gmail.com
url = https://github.com/tsbischof/photon_correlation

[options]
package_dir =
    = python
packages = find:
install_requires = 
    matplotlib
    numpy
    scipy

[options.packages.find]
where = python
